# code-dojos

./: LICENSE  README.md  pyproject.toml
src/: calc.py  fizzbuzz.py  sum.py
tests/: test_calc.py  test_fizzbuzz.py  test_sum.py
