[tool.poetry]
name = "code-dojos"
version = "0.1.0"
description = ""
authors = ["Nicolas Landier <nicolas.landier@spendesk.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
