[tool.poetry]
name = "code-dojos"
version = "0.1.0"
description = ""
authors = ["Nicolas Landier <nicolas.landier@spendesk.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
